--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^5.0.0-alpha.17",
     "next": "10.0.3",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-dom": "17.0.1"
   }
 }
