--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^5.0.0-alpha.17",
     "@material-ui/icons": "^5.0.0-alpha.15",
     "express": "^4.17.1",
+    "mongoose": "^5.11.1",
     "next": "10.0.3",
     "react": "^17.0.1",
     "react-dom": "17.0.1"
