--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-alpha.17",
+    "@material-ui/core": "^5.0.0-alpha.18",
     "@material-ui/icons": "^5.0.0-alpha.15",
     "express": "^4.17.1",
-    "mongoose": "^5.11.1",
+    "mongoose": "^5.11.3",
     "next": "10.0.3",
+    "peer": "^0.6.1",
     "react": "^17.0.1",
     "react-dom": "17.0.1",
     "swr": "^0.3.9"
